base/orders/deployment.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: orders  
  labels:  
    app: orders  
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: orders  
  template:  
    metadata:  
      labels:  
        app: orders  
    spec:  
      containers:  
      - name: frontend  
        image: null32sys/frontend:1.0.0  
        imagePullPolicy: Always  
        ports:  
        - containerPort: 8080  
        resources:  
          requests:  
            cpu: 100m  
            memory: 128Mi  
          limits:  
            cpu: 200m  
            memory: 256Mi
