base/orders/ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress  
metadata:  
  name: orders-ingress  
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:  
  rules:  
  - host: orders-service.default.svc.cluster.local  
    http:  
      paths:  
      - path: /  
        pathType: Prefix  
        backend:  
          service:  
            name: orders  
            port:  
              number: 80
